--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
-version: "3"
-
 services:
   postgres:
     image: postgres:latest
     container_name: fsw-barber-postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: fsw_barber
     ports:
       - "5432:5432"
     volumes:
-      - ./.postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
 
 volumes:
   .postgres-data:
